force-app/main/default/objects/FEC_Case_Remarks__c/FEC_Case_Remarks__c.object-meta.xml
<CustomObject>
    <label>Case Remarks</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Case Remark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Remarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>