force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>FEC_Assignment__c</referenceTo>
    <relationshipLabel>Case Remarks</relationshipLabel>
    <relationshipName>Case_Remarks</relationshipName>
    <type>Lookup</type>
</CustomField>