force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Remarks</relationshipName>
    <type>Lookup</type>
</CustomField>