force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_Case_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Remarks__c</fullName>
    <description>Nội dung chi tiết ghi chú mà User đã nhập</description>
    <label>Case Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>