force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Stage_Name__c</fullName>
    <description>Tên Stage tại thời điểm nhập ghi chú</description>
    <label>Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>