force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <description>Email ID của User tại thời điểm đã tạo ghi chú</description>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>