force-app/main/default/objects/FEC_Case_Remarks__c/fields/FEC_User_Role__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Role__c</fullName>
    <description>Role hệ thống của User đã tạo ghi chú</description>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>