force-app/main/default/objects/FEC_Case_Remarks__c/fields/Remark_Type__c.field-meta.xml
<CustomField>
    <fullName>Remark_Type__c</fullName>
    <description>Trường giúp phân biệt Remark level Case và Assignment</description>
    <label>Remark Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>